--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </a>
                 </div>
                 או העתיקו את הכתובת (לחצו כדי להעתיק):
-                <code>http://biy.ly/govgen35</code>
+                <code>http://bit.ly/govgen35</code>
             </div>
             <br /> 2020 &copy;
             <a href="https://www.linkedin.com/in/yuval-dolev/">יובל דולב</a>
